Improve student getApplication API and implement tests
